# paula

./: .flake8  .gitignore  INSTALL.md  LICENSE  README.md  TODO  environment.yaml  pyproject.toml
application/: config.json  config_backup.json  config_loader.py  logging_config.py  main.py
application/cover/: cover_main.py
application/database/: database_helper.py  features.py  features_gui.py  features_gui.tcss  genre.py  genre_vis.py  paula_schema.sql
application/gui/: data_table.py  events.py  fft_widget.py  genre_slider.py  image_button.py  log_controller.py  music_database_widget.py  paula_screen.py  play_test.py  renderable.py  screen_update.py  test.py  tree_table_mover.py  treelist.py  treelist.tcss  widget.py
application/importer/: importer_main.py
application/player/: audio_play_widget.py  but.py  button.tcss  device.py  test.py  test2.py
application/search/: search_main.py
application/similarity/: html_utils.py  similarity_feedback.py  similarity_main.py  train_weights.py
application/updater/: essentia_example.json  feature_extractor.py  updater_audio_files.py  updater_main.py
application/utils/: config_loader.py  logging_config.py
